testcases/pos/labeled/add_secret.bard
(21 raisedTo {secret}) + 21
