testcases/neg/eval_type/add_canfail_secret_does_fail.bard
(if false then 21 raisedTo {secret} else "world" raisedTo {secret}) + 21
